# defluff

./: .env.example  .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  captions.py  config.py  consume.py  content.py  db.py  debug_log.py  highlight_url.py  knowledge.py  main.py  models.py  ollama_agent.py  repository.py  research.py  transcript.py
backend/app/agents/: __init__.py  audit_loop.py  base.py  consumption.py  discussion.py  errors.py  parsing.py  research_planner.py
backend/app/agents/prompts/: audit.py  consumption.py  inputs.py  research.py
backend/app/api/: router.py  streaming.py
backend/app/api/routes/: captions.py  consume.py  content.py  discuss.py  health.py  knowledge.py  urls.py
backend/app/content/: __init__.py  article.py  errors.py  pdf.py  service.py  transcript.py  youtube.py
backend/app/core/: debug_log.py  logging.py
backend/app/db/: __init__.py  repository.py  session.py
backend/app/integrations/: ollama.py
backend/app/integrations/captions/: __init__.py  errors.py  whisper.py  youtube.py
backend/app/integrations/search/: duckduckgo.py  google.py
backend/app/schemas/: __init__.py  analysis.py  captions.py  consume.py  content.py  discuss.py  knowledge.py  research.py  urls.py
backend/app/services/: consume.py  highlight_url.py  knowledge.py  research.py
backend/app/utils/: timestamps.py
backend/sql/: schema.sql
backend/tests/: test_audit_loop.py  test_captions.py  test_consume.py  test_content.py  test_highlight_url.py  test_models.py  test_research.py  test_transcript.py
(+18 files in other folders)
