[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "defluff-backend"
version = "0.1.0"
description = "Python backend for defluff."
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29,<1.0",
    "fastapi>=0.115,<1.0",
    "faster-whisper>=1.1,<2.0",
    "httpx>=0.27,<1.0",
    "ollama>=0.5,<1.0",
    "pypdf>=5.0,<7.0",
    "pydantic-settings>=2.4,<3.0",
    "trafilatura>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
    "webvtt-py>=0.5,<1.0",
    "yt-dlp>=2025.1.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.6,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
